<resources>
  <string name="app_name">MovieListApplication</string>
  <string name="sign_in">Sign In</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="login">Login</string>

  // Sets the "Create an account" text to the color set here instead of the color inside the
  TextView
  <string name="not_registered_text">Not registered? <font color="#3577ff">Create an account</font></string>
  <string name="preference_file_key">movielistapp_preference_file_key</string>
  <string name="preference_userId_key">movielistapp_preference_userid_key</string>
  <string name="hello_user">Hello, User!</string>
  <string name="watchlist">Watchlist</string>
  <string name="browse_movies">Browse Movies</string>
  <string name="admin_stuff">Admin Stuff</string>
  <string name="menuusernametitle">menuUserNameTitle</string>
  <string name="logout">Logout</string>
  create_account
  <string name="confirm_password">Confirm Password</string>
  <string name="create_account">Create Account</string>
  <string name="user_name">Username</string>
  <string name="movie_title">Movie Title</string>
  <string name="manage_users">Manage Users</string>
  <string name="make_admin">Make Admin</string>
  <string name="delete_user">Delete User</string>
  <string name="movie_poster">Movie poster</string>
  <string name="release_date">Release Date</string>
  <string name="rating">Rating</string>
  <string name="add_to_watchlist">Add to Watchlist</string>
  <string name="genre">Genre</string>
  <string name="browse_genres">Browse Genres</string>
  <string name="remove_from_watchlist">Remove from Watchlist</string>
</resources>